--- a/PBHLTH W251 Project Milestone 4.Rmd
+++ b/PBHLTH W251 Project Milestone 4.Rmd
@@ -11,15 +11,15 @@ output: html_document
 
 ### Priya Bala and Mihir Pandya
 
-Scenario 1: This scenario contains demographic and geographic information, morbidity, disease severity, and county and regional vaccination data from a simulated California flu season.
+[**Scenario 1:**]{.underline} This scenario contains demographic and geographic information, morbidity, disease severity, and county and regional vaccination data from a simulated California flu season.
 
 At the end of Milestone 3 we have created a final merged dataset with **aggregated measures of flu severity and COVID vaccination rates for the April 1st quarter by age categories**. We exported the final dataset and imported it again in this html document. For reference the code used to create the final merged data is added at the end of the document as a comment.
 
-Graph/ Plot Visualizations were done by Priya Bala and the table was created by Mihir Pandya.
+Graph/ Plot Visualization was done by Priya Bala and the table was created by Mihir Pandya.
 
-## Step 1: Importing the final dataset
+### Step 1: Importing the final dataset
 
-```{r warning=FALSE message=FALSE}
+```{r, warning=FALSE message=FALSE}
 # First we are adding all the packages that are needed to create the visualizations and importing the final dataset. 
 
 library(readr)
@@ -49,7 +49,7 @@ print(final_data_renamed)
 
 Now that we have imported our final dataset, we are cleaning the final dataset slightly to make the visualizations easier.
 
-```{r warning=FALSE message=FALSE}
+```{r, warning=FALSE message=FALSE}
 
 # Remove the 12th column from final_data_renamed
 final_clean_data <- final_data_renamed[,-12]
@@ -62,7 +62,9 @@ print(final_clean_data)
 
 ### Step 2: Creating the graph/plot based on final cleaned aggregated dataset. 
 
-```{r}
+Below, I am creating a scatterplot to look at the association between the total number of severe flu cases and the COVID-19 vaccination rate by age categories in Alameda county during April 1st quarter. For this plot, I am using the "Cumulative Severe" column which was created in Milestone 3 as an summarized measure that was aggregated for each age category; and the "Vaccination Rate" variable that was also created in Milestone 3 and aggregated for each age category.
+
+```{r, echo = TRUE}
 
 ggplot(final_clean_data, aes(x = `CUMULATIVE SEVERE`, y = `VACCINATION RATE`, color = `AGE CAT`)) +
   geom_point(size = 3) +  # Adjust the size of the points as needed
@@ -72,18 +74,33 @@ ggplot(final_clean_data, aes(x = `CUMULATIVE SEVERE`, y = `VACCINATION RATE`, co
             aes(label = paste(round(`CUMULATIVE SEVERE`, 2), ", ", round(`VACCINATION RATE`, 2))),
             position = position_nudge(x = -5), size = 3, show.legend = FALSE, hjust = 5) +  # Move label to the left
   labs(title = " Flu Severity vs COVID-19 Vaccination Rates by Age Category in 
-       Alameda County",
+       Alameda County for April 1st 2023 quarter",
        x = "Cumulative Severe Flu Cases",
        y = "Vaccination Rate") +
   theme_minimal() + theme(axis.line = element_line(size = 0.5))
 
 ```
 
-Step 3: Creating a table representing the final dataset
+[**Interpretation of the plot:**]{.underline}
 
-```{r}
+This scatter plot visualizes the relationship between the cumulative severe cases of flu and the COVID-19 vaccination rates across different age categories in Alameda county for April 1st 2023 quarter. Each point represents a specific age category, with the x-axis representing the cumulative severe flu cases and the y-axis representing the COVID-19 vaccination rate. The color of each point corresponds to different age categories.
 
-new_kable <- kable(data_renamed, format = "markdown", caption = "Influenza Cases and COVID-19 Vaccination Data from Alameda County Second Quarter 2023", align = "c", booktabs = TRUE) %>%
+1.  **Age and Flu Severity:** The plot reveals a clear correlation between age and the total number of severe flu cases. In particular, the "0-17" age category exhibits the lowest number of severe flu cases, indicating that younger individuals within this category have experienced fewer instances of severe flu.
+
+2.  **Age and Vaccination Rates:** Simultaneously, the plot depicts a positive association between age and COVID-19 vaccination rates. The "0-17" age category stands out with the lowest vaccination rate, suggesting that younger individuals within this group have lower COVID-19 vaccination coverage.
+
+3.  **Age and Flu Severity vs. Vaccination Rate:** As age increases, both the total number of severe flu cases and the COVID-19 vaccination rate tend to rise. This suggests a potential pattern where older age groups experience more severe flu cases, possibly due to various factors such as increased susceptibility or a higher likelihood of complications. Correspondingly, the vaccination rate tends to be higher in older age groups, indicating a proactive response to mitigate the impact of infectious diseases.
+
+4.  **Highlight on 65 and Older Category:** Notably, the "65+" age category emerges with the highest total severe flu cases, emphasizing that individuals aged 65 and older are more vulnerable to severe flu. Despite the elevated risk, this age category also demonstrates a higher COVID-19 vaccination rate, reflecting an awareness of the importance of vaccination for older individuals who may face greater health risks.
+
+**Overall Implications:**
+The plot suggests a positive association between age, severe flu cases, and COVID-19 vaccination rates.
+
+### Step 3: Creating a table representing the final dataset 
+
+```{r, warning=FALSE message=FALSE}
+
+new_kable <- kable(final_clean_data, format = "markdown", caption = "Influenza Cases and COVID-19 Vaccination Data from Alameda County Second Quarter 2023", align = "c", booktabs = TRUE) %>%
   kable_styling(latex_options = c("striped", "hold_position"), full_width = FALSE)
 
 add_footnote(
