--- a/PBHLTH W251 Project Milestone 4.Rmd
+++ b/PBHLTH W251 Project Milestone 4.Rmd
@@ -64,7 +64,7 @@ print(final_clean_data)
 
 Below, I am creating a scatterplot to look at the association between the total number of severe flu cases and the COVID-19 vaccination rate by age categories in Alameda county during April 1st quarter. For this plot, I am using the "Cumulative Severe" column which was created in Milestone 3 as an summarized measure that was aggregated for each age category; and the "Vaccination Rate" variable that was also created in Milestone 3 and aggregated for each age category.
 
-```{r, echo = TRUE}
+```{r, echo = TRUE warning=FALSE message=FALSE}
 
 ggplot(final_clean_data, aes(x = `CUMULATIVE SEVERE`, y = `VACCINATION RATE`, color = `AGE CAT`)) +
   geom_point(size = 3) +  # Adjust the size of the points as needed
@@ -76,8 +76,12 @@ ggplot(final_clean_data, aes(x = `CUMULATIVE SEVERE`, y = `VACCINATION RATE`, co
   labs(title = " Flu Severity vs COVID-19 Vaccination Rates by Age Category in 
        Alameda County for April 1st 2023 quarter",
        x = "Cumulative Severe Flu Cases",
-       y = "Vaccination Rate") +
-  theme_minimal() + theme(axis.line = element_line(size = 0.5))
+       y = "Vaccination Rate",
+       caption = "Figure 1: This plot shows the cumulative severe flu cases and the COVID-19 vaccination rate by age in Alameda 
+       county during the April 1st quarter. As age increases the number of severe flu cases and the COVID-19
+      vaccination rate increases in Alameda county.") + theme_minimal() + theme(axis.line = element_line(size = 0.5), plot.caption = element_text(hjust = 0))
+
+
 
 ```
 
@@ -108,4 +112,29 @@ add_footnote(
   notation = "alphabet",
   threeparttable = FALSE,
   escape = TRUE)
+```
+
+From Milestone 3 we have added the final code for creating the merged datasets that are used in this milestone. We have made all the coding elements as comments, because we would have to add all the previous steps and multiple datasets before and after cleaning to this html document.
+
+```{r chunk_name, include=FALSE}
+# Combining the two final datasets to create one final dataset
+
+# The ca_vax_county_final dataset has its county_name variables as Alameda
+# rather than Alameda County, thus we are adding additional cleaning
+# to make the merger of the combined datasets easier
+
+#### CODE BELOW - made into comment form #### 
+
+# ca_vax_county_final <- ca_vax_county_final %>% mutate(county_name = case_when(
+#    county_name == "Alameda" ~ "Alameda County"))
+
+# Merging the two final datasets
+
+# merged_final_alameda <- merge(sim_Cali_aggregated, ca_vax_county_final, by = "age_cat",
+# all = TRUE)
+# print(merged_final_alameda)
+
+##### The code for the final merge is mentioned above ##### 
+
+# In the below R chunks we have imported the final dataset and added all the necessary packages that are required for Milestone 4. For additional merge steps and aggregation please refer to Milestone 3. 
 ```
